    - PA&R's Tips Info changed please read again for the new message.
    - Rampant's Mech Suit resistances changed, Made combat Mech Suit craft abele with PAR.
    - Nanobots refined: 1 equipment at: Par Armour 1, last 4 at Night Immunity 1. 
    - Added ParSpaceAge Extension disabled Function to code point not needed when mod addon is active.
  Bugfixes:
    - Temp fix for compatibility recipes.
    - Crash with AAI industries.
    - Bobs tech name crash.
    - Tech with creatable unlocks in bobs was using the vanilla circuit not bobs basic can be a soft-lock.
    - Bobs tech soft lock bob-carbon. in combination with Alt_Chemical_Processing.
    - Fixed many spelling errors across the Changelog.
    - Recipe issues from 1.1 (mod version 0.2.xx)
    - Added Nanobots Refined to the compatibility. Made the old ones incompatible.
    - Wrong mod required regards to resistances 
  Credits:
    - Thanks @MetroidManiax Noticing wrong bobs mod listed.
  Info:
    - Note that this version are not fully finished & beta versions are available at my discord server.
    - Your are welcome to try it and give feedback on what's there. I don't want reports about uncompleted Features. (Example: the settings are missing)
    - this INFO will be mark over when the official 0.4 is done.
---------------------------------------------------------------------------------------------------
Version: 0.3.18
Date: 12.03.2025
  Features:
    - Repeatable migrations.
  Changes:
    - Moved disable function: Filter, Recipe, Tech. To Chemical mod.
    - Removed Redundant settings.
    - Improved tips description on some mods.
  Modding:
    - Fixed missing item in roboport recipe (boblogiostics).
    - Added item to armour recipes (bobplate, bobenemies).
    - bob- Prefix Crashing with beta (11.03.25).
  Bugfixes:
    - Crashes with bobs in general. (11.03.25).
  Info:
    - Mistakenly deleted & reuploaded. 21.05.2025