@@ -4,8 +4,8 @@ local icon_utils = require("structures.icon-utils")
 local SS = settings.startup
 
 local nightvisions = {
-    {buffer_capacity = "1TJ", input_flow_limit ="150GW", energy_input ="125GW", weightvalue = 550, order ="jcc[night-vision]-ac[armour-replacer]", lut ={{0.5, "__Power-Armour-Replacer__/graphics/color_lut/par-nvgs-frozen.png"}}},
-    {buffer_capacity = "1kJ", input_flow_limit =  "1kW", energy_input =   "1W", weightvalue = 1100, order ="jdd[night-vision]-ad[armour-replacer]", lut ={{0.5, "__Power-Armour-Replacer__/graphics/color_lut/par-nvgs-day.png"}}},
+    {buffer_capacity = "1TJ", input_flow_limit ="150GW", energy_input ="125GW", Darkness = 0.75, weightvalue = 550, order ="jcc[night-vision]-ac[armour-replacer]", lut ={{0.5, "__Power-Armour-Replacer__/graphics/color_lut/par-nvgs-frozen.png"}}},
+    {buffer_capacity = "1kJ", input_flow_limit =  "1kW", energy_input =   "1W", Darkness = 0.35, weightvalue = 1100, order ="jdd[night-vision]-ad[armour-replacer]", lut ={{0.5, "__Power-Armour-Replacer__/graphics/color_lut/par-nvgs-day.png"}}},
 }
 
 for tier, nightvision in pairs(nightvisions) do
@@ -45,7 +45,7 @@ for tier, nightvision in pairs(nightvisions) do
         categories = {"armor"},
         activate_sound = { filename = "__base__/sound/nightvision-on.ogg", volume = 0.5 },
         deactivate_sound = { filename = "__base__/sound/nightvision-off.ogg", volume = 0.5 },
-        darkness_to_turn_on = 0.75,
+        darkness_to_turn_on = nightvision.Darkness,
         color_lookup = nightvision.lut,
     }
     data:extend({
